--- a/style.css
+++ b/style.css
@@ -1,17 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-
 }
-
-
 
 .container {
     display: grid;
-    height: 80vh;
-
-    padding-right: 8px;
-    padding-left: 8px;
+    height: 70vh;
+    padding: 8px;
     align-items: center;
     justify-content: center;
 }
@@ -19,7 +14,7 @@
 #users-grid {
     display: grid;
     max-width: 1024px;
-    margin-top: 10vh;
+    margin-top: 5vh;
     margin-bottom: 10vh;
     grid-template-columns: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
@@ -39,7 +34,7 @@
     display: block;
     border-radius: 8px;
     text-align: center;
-    padding: 10px 20px;
+    padding: 5px 10px;
     background-color: rgb(30, 43, 13);
     box-shadow: 3px 3px 5px 6px rgb(241, 240, 240);
     color: white;
@@ -49,7 +44,6 @@
     margin-bottom: 10px;
     font-size: 0.8rem;
 }
-
 
 .user .strong {
     font-weight: 700;
